Adding Secretary Name
Adding Secretary Name

--- a/history.html
+++ b/history.html
@@ -86,7 +86,7 @@
 								<tr>
 									<td>06.09.1988 to 05.09.1990</td>
 									<td>Mr. C.S. Rajendran</td>
-									<td></td>
+									<td>Mr. K.C.Rajasekaran</td>
 									<td></td>
 								</tr>
 								<tr>
