--- a/gallery1.html
+++ b/gallery1.html
@@ -30,6 +30,7 @@
 									<li>Annual Day Celebration 2017 Photos <a href="gallery3.html">Click here</a>   <img src="images/new.gif" alt="New" /></li>
 									<li>International Coastal Cleanup 2017 Photos <a href="gallery1.html">Click here</a>   <img src="images/new.gif" alt="New" /> </li>
 									<li>Republic Day Celebration 2018 Photos <a href="gallery2.html">Click here</a>   <img src="images/new.gif" alt="New" /></li>
+									<li>Website Launch Day 2018 Photos <a href="gallery4.html">Click here</a>   <img src="images/new.gif" alt="New" /></li>
 								</ul>
 							</marquee>
 						</div>
@@ -56,6 +57,7 @@
 									  <li><a href="gallery3.html"><b>Annual Day 2017</b></a></li>
 								      <li><a href="#"><b>International Coastal Cleanup</b></a></li>
 								      <li><a href="gallery2.html"><b>Republic Day 2018</b></a></li>
+									  <li><a href="gallery4.html"><b>Website Launch Day 2018</b></a></li>
 								    </ul>
 								  </li>
 							      <li><a href="achievements.html"><b>Facilities</b></a></li>
