--- a/gallery4.html
+++ b/gallery4.html
@@ -41,20 +41,20 @@
 							<nav class="navbar navbar-default menu-margin-bottom">
 						  	    <ul class="nav nav-justified navbar-nav">
 							      <li><a href="index.html"><b>Home</b></a></li>
-							      <li class="dropdown active">
+							      <li class="dropdown">
 								    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><b>Management</b>
 								    <span class="caret"></span></a>
 								    <ul class="dropdown-menu">
 								      <li><a href="administration.html"><b>Administration</b></a></li>
 								      <li><a href="history.html"><b>History</b></a></li>
-									  <li><a href="#"><b>Principal's Message</b></a></li>
+									  <li><a href="principal.html"><b>Principal's Message</b></a></li>
 								    </ul>
 								  </li>
-							     <li class="dropdown">
+							       <li class="dropdown active">
 								    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><b>Gallery</b>
 								    <span class="caret"></span></a>
 								    <ul class="dropdown-menu">
-									  <li><a href="gallery3.html"><b>Annual Day 2017</b></a></li>
+									  <li><a href="#"><b>Annual Day 2017</b></a></li>
 								      <li><a href="gallery1.html"><b>International Coastal Cleanup</b></a></li>
 								      <li><a href="gallery2.html"><b>Republic Day 2018</b></a></li>
 									  <li><a href="gallery4.html"><b>Website Launch Day 2018</b></a></li>
@@ -65,29 +65,46 @@
 							    </ul>
 							</nav>
 						</div>
-
+						
 					</div>
 				</div>
-				<!-- Carousel-->
-				<div class="row padding-20">
-					<a href="images/principal.jpg" target="_blank">
-				    	<img src="images/principal1.jpg" alt="Our First Secretary" align="center" class="img-responsive center-block" style="width:50%; height:50%;"/>
-					</a>
-				</div>
-				<!-- Content -->
+				<!-- Carousel -->
 				<div class="row padding-20 margin-top text-center">
-					<h1 class="title-font-content-main">Principal's Message</h1>
-					</br>
-					<p class="text-left">Dear Students, Staff & Parents</p>
-					</br>
-					<p class="text-center"><b>"Education is a shared commitment between dedicated teachers, motivated students and enthusiastic parents with high expectations"</b></p>
-					<p class="text-justify">Teaching is a divine assignment. We at K.V.S.Matric Hr. Sec. School love teaching  & teaching is our life mission. We upgrade the quality of students in all aspects of life not only in education and also to lead a peaceful life and encourage them to be self-reliant & independent citizen. We install all the values of life, ethics & life skills.</p>
-					<p class="text-justify">We view education as a partnership between the students, parents, the community and the school. The parents are the most strengthening power in moulding the future of children. Their consistent support empowers us to do more and more. I pay my gratitude to them for their faith in us. </p>
-					</br>
-					<p class="text-left">Warm regards</p>
-					<p class="text-left"><b>Mrs. G. Shanthi Roja M.Sc., M.Ed., M.Phil</b></p>
-					<p class="text-left">Principal</p>
+					<div class="row">
+						<a href="images/websitelaunch/1.jpg" target="_blank">
+					    	<img src="images/websitelaunch/1.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+						<a href="images/websitelaunch/2.jpg" target="_blank">
+					    	<img src="images/websitelaunch/2.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+						<a href="images/websitelaunch/3.jpg" target="_blank">
+					    	<img src="images/websitelaunch/3.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+					</div>
+					<div class="row">
+						<a href="images/websitelaunch/4.jpg" target="_blank">
+					    	<img src="images/websitelaunch/4.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+						<a href="images/websitelaunch/5.jpg" target="_blank">
+					    	<img src="images/websitelaunch/5.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+						<a href="images/websitelaunch/6.jpg" target="_blank">
+					    	<img src="images/websitelaunch/6.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+					</div>
+					<div class="row">
+						<a href="images/websitelaunch/7.jpg" target="_blank">
+					    	<img src="images/websitelaunch/7.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+						<a href="images/websitelaunch/9.jpg" target="_blank">
+					    	<img src="images/websitelaunch/9.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+						<a href="images/websitelaunch/8.jpg" target="_blank">
+					    	<img src="images/websitelaunch/8.jpg" alt="Our First Secretary" class="img-thumbnail" style="width:25%; height:25%;"/>
+						</a>
+					</div>
 				</div>
+				
 				<!-- footer -->
 				<div class="row">
 					<img src="images/separator-long.gif" class="img-responsive center-block" style="width:97%;">
@@ -108,6 +125,6 @@
 			<div  class="col-0 col-sm-1 padding-zero">
 			</div>
 		</div>
-	</div>
+	</div>	
 </body>
 </html>
