--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,7 @@
 									<li>Annual Day Celebration 2017 Photos <a href="gallery3.html">Click here</a>   <img src="images/new.gif" alt="New" /></li>
 									<li>International Coast Cleanup 2017 Photos <a href="gallery1.html">Click here</a>   <img src="images/new.gif" alt="New" /> </li>
 									<li>Republic Day Celebration 2018 Photos <a href="gallery2.html">Click here</a>   <img src="images/new.gif" alt="New" /></li>
+									<li>Website Launch Day 2018 Photos <a href="gallery4.html">Click here</a>   <img src="images/new.gif" alt="New" /></li>
 								</ul>
 							</marquee>
 						</div>
@@ -75,6 +76,7 @@
 									  <li><a href="gallery3.html"><b>Annual Day 2017</b></a></li>
 								      <li><a href="gallery1.html"><b>International Coastal Cleanup</b></a></li>
 								      <li><a href="gallery2.html"><b>Republic Day 2018</b></a></li>
+									  <li><a href="gallery4.html"><b>Website Launch Day 2018</b></a></li>
 								    </ul>
 								  </li>
 							      <li><a href="achievements.html"><b>Facilities</b></a></li>
